base/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy-svc
spec:
  selector:
    app: ntfy
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
